force-app/main/default/objects/SMS_Message__c/SMS_Message__c.object-meta.xml
<CustomObject>
    <label>SMS Message</label>
    <nameField>
        <displayFormat>SMS-{000000}</displayFormat>
        <label>SMS Messages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>