force-app/main/default/objects/SMS_Message__c/fields/Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Value__c</fullName>
    <label>Amount Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>