force-app/main/default/objects/SMS_Message__c/fields/CC_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>CC_Available_Balance__c</fullName>
    <label>CC Available Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>