force-app/main/default/objects/SMS_Message__c/fields/Formula_Amount__c.field-meta.xml
<CustomField>
    <fullName>Formula_Amount__c</fullName>
    <formula>IF(
OR(ISBLANK(Amount_Value__c), (Amount_Value__c == &apos;n/a&apos;)),
0,
VALUE(Amount_Value__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>