force-app/main/default/objects/SMS_Message__c/fields/INV_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>INV_Available_Balance__c</fullName>
    <label>INV Available Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>