force-app/main/default/objects/SMS_Message__c/fields/Received_At_formula__c.field-meta.xml
<CustomField>
    <fullName>Received_At_formula__c</fullName>
    <formula>DATETIMEVALUE(LEFT(Received_At__c,19))</formula>
    <label>Received At (formula)</label>
    <type>DateTime</type>
</CustomField>