force-app/main/default/objects/SMS_Message__c/fields/Related_Investment__c.field-meta.xml
<CustomField>
    <fullName>Related_Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>