force-app/main/default/objects/SMS_Message__c/fields/Savings_or_CC_Account__c.field-meta.xml
<CustomField>
    <fullName>Savings_or_CC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Savings/CC Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>