force-app/main/default/objects/SMS_Message__c/fields/UPI__c.field-meta.xml
<CustomField>
    <fullName>UPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UPI?</label>
    <type>Checkbox</type>
</CustomField>