force-app/main/default/objects/SMS_Message__c/fields/UPI_Reference__c.field-meta.xml
<CustomField>
    <fullName>UPI_Reference__c</fullName>
    <label>UPI Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>