force-app/main/default/objects/SMS_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Content__c</columns>
    <columns>Type__c</columns>
    <columns>Amount_Value__c</columns>
    <columns>SA_Available_Balance__c</columns>
    <columns>Savings_or_CC_Account__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>UPI__c</columns>
    <columns>UPI_Reference__c</columns>
    <columns>Sender__c</columns>
    <columns>Received_At__c</columns>
    <columns>Create_Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>