force-app/main/default/objects/SMS_Message__c/listViews/Balance_Update_Messages.listView-meta.xml
<ListView>
    <fullName>Balance_Update_Messages</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Create_Transaction__c</columns>
    <columns>Received_At__c</columns>
    <columns>Type__c</columns>
    <columns>Sender__c</columns>
    <columns>Balance_Update__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Balance_Update__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Balance Update Messages</label>
</ListView>