force-app/main/default/objects/SMS_Message__c/listViews/Non_Transaction_Messages.listView-meta.xml
<ListView>
    <fullName>Non_Transaction_Messages</fullName>
    <columns>NAME</columns>
    <columns>Amount_Value__c</columns>
    <columns>Content__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Create_Transaction__c</columns>
    <columns>Formula_Amount__c</columns>
    <columns>Approved__c</columns>
    <columns>Received_At__c</columns>
    <columns>Type__c</columns>
    <columns>Sender__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>debit,credit</value>
    </filters>
    <label>Non_Transaction Messages</label>
</ListView>