force-app/main/default/objects/SMS_Message__c/listViews/Transaction_Messages.listView-meta.xml
<ListView>
    <fullName>Transaction_Messages</fullName>
    <columns>NAME</columns>
    <columns>Amount_Value__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Type__c</columns>
    <columns>Formula_Amount__c</columns>
    <columns>Approved__c</columns>
    <columns>Content__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Create_Transaction__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Formula_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Transaction Messages</label>
</ListView>